# plane_dodge_game

./: README.md  game.js  game.py  index.html  pyproject.toml
web/: game.js
